package factory.traditional.piazzStore.pizza;

public class CheesePizza extends Pizza {

	@Override
	public void prepare() {
		// TODO Auto-generated method stub
		System.out.println(" 给奶酪披萨 准备原材料  ");
	}

}
