package factory.traditional.piazzStore.pizza;

public class PepperPizza extends Pizza {

	@Override
	public void prepare() {
		// TODO Auto-generated method stub
		System.out.println("给胡椒披萨 准备原材料  ");
	}

}
