@startuml

abstract class Pizza {
    {abstract} void prepare();
    void back();
    void cut();
    void box();
}

class CheesePizza
class GreakPizza
class PepperPizza

CheesePizza -up-|> Pizza
GreakPizza -up-|> Pizza
PepperPizza -up-|> Pizza

class OrderPizza

OrderPizza -up-> CheesePizza
OrderPizza -up-> GreakPizza
OrderPizza -up-> PepperPizza

@enduml